<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundfoodly"
    android:backgroundTint="@color/custom_black_screen_background"
    android:backgroundTintMode="src_atop"
    tools:context=".DetalleRecetaActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <ImageView
        android:id="@+id/img_logoFoodlyDetalle"
        android:layout_width="210dp"
        android:layout_height="105dp"
        android:contentDescription="@string/desc_logo_text"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toTopOf="@+id/guideline21"
        app:srcCompat="@drawable/logofoodly" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginTop="10dp"
        android:background="@color/custom_gray_t25"
        app:layout_constraintEnd_toStartOf="@+id/guideline24"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toBottomOf="@+id/btn_volverDetalleRec">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_nombreRecetaDetalle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/nombre_receta_provisorio"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textIsSelectable="true"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_ingredientesTituloDetalle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/textView_Ingredientes"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_nombreRecetaDetalle" />

            <TextView
                android:id="@+id/tv_ingredientesDetalle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ingredientes_provisorios"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_ingredientesTituloDetalle" />

            <TextView
                android:id="@+id/tv_preparacionTituloDetalle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/textView_Preparacion"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_ingredientesDetalle" />

            <TextView
                android:id="@+id/tv_preparacionDetalle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/preparacion_provisoria"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_preparacionTituloDetalle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_actualizarDetalleRec"
        style="@style/Widget.Material3.Button.TextButton.Dialog.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_actualizar"
        android:textColor="@color/custom_green"
        android:textSize="18sp"
        app:icon="@drawable/actualizaricon"
        app:iconSize="30sp"
        app:iconTint="@color/custom_green"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <Button
        android:id="@+id/btn_eliminarDetalleRec"
        style="@style/Widget.Material3.Button.TextButton.Dialog.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_eliminar"
        android:textColor="@color/custom_red"
        android:textSize="18sp"
        app:icon="@drawable/eliminaricon"
        app:iconSize="30sp"
        app:iconTint="@color/custom_red"
        app:layout_constraintEnd_toStartOf="@+id/guideline24"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <Button
        android:id="@+id/btn_volverDetalleRec"
        style="@style/Widget.Material3.Button.TextButton.Dialog.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/btn_volver_txt"
        android:textColor="@color/custom_green"
        android:textSize="20sp"
        app:icon="@drawable/flechavolver"
        app:iconPadding="4sp"
        app:iconSize="20sp"
        app:iconTint="@color/custom_green"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toBottomOf="@+id/img_logoFoodlyDetalle" />
</androidx.constraintlayout.widget.ConstraintLayout>